[Issue #165][WIP] finished score only view

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -306,3 +306,5 @@ ar:
   you_have_score: "مبروك! لقد سجلت النقاط التالية"
   share_your_score: "شارك على الشبكات الاجتماعية!"
   you_have_won_these_trophies: "لقد حققت الانجازات التالية!"
+  game_over: "انتهت اللعبة"
+  lose_score: "لقد سجلت النقاط التالية"
