[issue #167][WIP][adding arabic translations for popovers to the pick a language view]

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -8,7 +8,9 @@ ar:
   sign_in: "تسجيل الدخول"
   sign_out: "تسجيل خروج"
   english: "English"
-  arabic: "العربية"
+  english_button: "الانجليزية"
+  arabic_button: "العربية"
+  both_button: "كلاهما"
   email: "البريد الالكتروني"
   email2: "البريد الالكتروني"
   password: "كلمة السر"
@@ -303,3 +305,10 @@ ar:
   already_connected: "التواصل بالفعل موجود!"
   remove_connection: "إلغاء الاتصال مع تويتر"
   connect_to_twitter: "تواصل مع تويتر"
+  english_popover_content: "<p>هذا الاختيار يجعلك أن تشكل وتصوت على كلمات إنجليزية فقط<p> <button class='tutBtn btn btn-primary' style='width: 120px; height:30px; font-size: 20px; color: white;' id='eng-btn-po'onclick='destroy(this.id)'>التالي</button>"
+  english_popover_title: "<h4>الزر الانجليزي</h4>"
+  arabic_popover_content: "<p>هذا الاختيار يجعلك أن تشكل وتصوت على كلمات عربية فقط<p> <button class='tutBtn btn btn-primary' style='width: 120px; height:30px; font-size: 20px; color: white;' id='ar-btn-po'onclick='destroy(this.id)'>التالي</button>"
+  arabic_popover_title: "<h4>الزر العربي</h4>"
+  both_popover_content: "<p>هذا الاختيار يجعلك أن تشكل وتصوت على كلمات عربية و إنجلزية<p> <button class='tutBtn btn btn-primary' style='width: 120px; height:30px; font-size: 20px; color: white;' id='both-btn-po'onclick='destroy(this.id)'>التالي</button>"
+  both_popover_title: "<h4>زر كلاهما</h4>"
+
