--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -11,8 +11,10 @@ en:
   sign_in: "Sign In"
   email: "Email"
   password: "Password"
-  english: "English"
-  arabic: "Arabic"
+  english: "الانجليزية"
+  english_button: "English"
+  arabic_button: "Arabic"
+  both_button: "Both"
   arabic: "العربية"
   search: "Search Keywords"
   search_here: "search keywords here"
@@ -296,3 +298,9 @@ en:
   already_connected: "already connected to Twitter!"
   remove_connection: "Remove Connection"
   connect_to_twitter: "Connect to Twitter"
+  english_popover_content: "<p>This button allows you to form and vote on, only English words during game play</p> <button class='tutBtn btn btn-primary' style='width: 120px; height:30px; font-size: 20px; color: white;' id='eng-btn-po'onclick='destroy(this.id)'>Next</button>"
+  english_popover_title: "<h4>English Button</h4>"
+  arabic_popover_content: "<p>This button allows you to form and vote on, only Arabic words during game play</p> <button class='tutBtn btn btn-primary' style='width: 120px; height:30px; font-size: 20px; color: white;' id='ar-btn-po'onclick='destroy(this.id)'>Next</button>"
+  arabic_popover_title: "<h4>Arabic Button</h4>"
+  both_popover_content: "<p>This button allows you to form and vote on, Both English and Arabic words during game play</p> <button class='tutBtn btn btn-primary' style='width: 120px; height:30px; font-size: 20px; color: white;' id='both-btn-po'onclick='destroy(this.id)'>Got it</button>"
+  both_popover_title: "<h4>Both Button</h4>"
