--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -296,3 +296,4 @@ en:
   already_connected: "already connected to Twitter!"
   remove_connection: "Remove Connection"
   connect_to_twitter: "Connect to Twitter"
+  you_have_prizes: "You have won the following prizes!"
