[issue #350] Home page created.

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -303,3 +303,24 @@ ar:
   already_connected: "التواصل بالفعل موجود!"
   remove_connection: "إلغاء الاتصال مع تويتر"
   connect_to_twitter: "تواصل مع تويتر"
+  caro1h: "عربلتي"
+  caro1b: "موقع سهل الاستعمال لمساعدة مطوري البرامج الناطقين باللغة العربية والغير ناطقين بها لترجمة مواقعهم بسهولة"
+  more: "معرفة المزيد"
+  feat1h: "إلعب"
+  feat1b: "ساعدنا و ساهم معنا باللعب لتطوير قاعدة البيانات."
+  feat2h: "إنشاء حساب"
+  feat2b: "جاهز لإستعمال موقعنا؟ انشئ حساب مع عربلتي للإستفادة القصوى من موقعنا."
+  feat3h: "إستخدم "
+  feat3b: "إذهب للجزء الخاص بالمطورين."
+  featdevh1: "قاعدة بيانات يعتمد عليها."
+  featdevb1: "مع قاعدة بيانات تتميز بالمرونة فالترجمة و مصنفة حسب السن و البلد و النوع يستطيع المطورون أن يجدوا بسهولة الترجمة المناسبة لأسواقهم المستهدفة."
+  featdevh2: "مشاريع تسهل حياتك."
+  featdevb2: "المطورون يستطيعوا أن ينشئوا مشاريع تجمع كلمات ذات هدف مترابط. و يمكن للمشروع بسهولة اند يصدر أو يستورد أو يشارك مع المطورين الأخرين بدغضة زر."
+  featgameh1: "لعبة ذات هدف."
+  featgameb1: "المستخدمين يمكنهم اللعب والمساهمة في بناء قاعدة البيانات. "
+  featgameh2: "شارك و نافس."
+  featgameb2: "حاول أن تهزم اصدقاءك و تشعل غيظهم بنشر نتيجتك على فيسبوك و تويتر."
+  developed_by: "سمارت سوفت"
+  gamers: "اللاعبين"
+  play: "إلعب الأن "
+
