--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -305,4 +305,4 @@ ar:
   already_connected: "التواصل بالفعل موجود!"
   remove_connection: "إلغاء الاتصال مع تويتر"
   connect_to_twitter: "تواصل مع تويتر"
-
+  confirm: "هل أنت متأكد من مسح المشروع ؟"
