[#355] adds connect and remove connection links to facebook

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -234,7 +234,7 @@ ar:
         first_name: "الاسم الاول"
         last_name: "إسم العائلة"
   not_in_range: "ليس في الحدود المسموح بها"
-  connect_to: "تواصل مع"
+  connect_to_facebook: "تواصل مع فيسبوك"
   disconnect_from: "افصل تواصلك مع"
   facebook: "فيسبوك"
   my_info: "معلوماتي"
@@ -300,7 +300,7 @@ ar:
   remove_twitter_connection: "تم إلغاء التواصل مع تويتر بنجاح!"
   connection_failure: "فشل التواصل!"
   already_connected: "التواصل بالفعل موجود!"
-  remove_connection: "إلغاء الاتصال مع تويتر"
+  remove_connection: "إلغاء الاتصال"
   connect_to_twitter: "تواصل مع تويتر"
   fill_in_next: "من فضلك املأ الفراغات التالية"
   or: "أو"
@@ -312,3 +312,4 @@ ar:
   already_connected: "لقد قمت بتسجيل الدخول من قبل و حسابك متصل بفيسبوك بالفعل"
   errors_prohibited: "اخطاء منعتك من التسجيل"
   sign_up_e_acc: "سجل بحساب اخر"
+  remove_fb_connection: "تم إلغاء التواصل مع فيسبوك بنجاح!"
