--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -213,7 +213,7 @@ en:
       developer:
         first_name: "First Name"
         last_name: "Last Name"
-  connect_to: "Connect to"
+  connect_to_facebook: "Connect to Facebook"
   disconnect_from: "Disconnect from"
   facebook: "facebook"
   my_info: "My Information"
@@ -305,3 +305,4 @@ en:
   already_connected: "You're signed in and your account is already connected to facebook"
   errors_prohibited: "errors prohibited you from being saved"
   sign_up_e_acc: "Sign up with an existing account"
+  remove_fb_connection: "Connection to Facebook removed successfully!"
