[#355] resolve duplication in locale vars]

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -309,7 +309,7 @@ ar:
   signed_in_fb: "تم الدخول بنجاح بإستخدام فيسبوك"
   logged_in_to_fb: "حسابك الآن متصل بفيسبوك"
   oops_error_fb: "واجهتنا مشاكل حين حولنا التواصل مع فيسبوك من فضلك حاول التواصل مرة أخرى"
-  already_connected: "لقد قمت بتسجيل الدخول من قبل و حسابك متصل بفيسبوك بالفعل"
+  already_connected_fb: "لقد قمت بتسجيل الدخول من قبل و حسابك متصل بفيسبوك بالفعل"
   errors_prohibited: "اخطاء منعتك من التسجيل"
   sign_up_e_acc: "سجل بحساب اخر"
   remove_fb_connection: "تم إلغاء التواصل مع فيسبوك بنجاح!"
