--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -302,7 +302,7 @@ en:
   signed_in_fb: "Signed in succesfully via facebook"
   logged_in_to_fb: "Your account is now connected to Facebook"
   oops_error_fb: "Oops an error has occured while communicating with Facebook. Please try again"
-  already_connected: "You're signed in and your account is already connected to facebook"
+  already_connected_fb: "You're signed in and your account is already connected to facebook"
   errors_prohibited: "errors prohibited you from being saved"
   sign_up_e_acc: "Sign up with an existing account"
   remove_fb_connection: "Connection to Facebook removed successfully!"
