--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -298,11 +298,21 @@ en:
   already_connected: "already connected to Twitter!"
   remove_connection: "Remove Connection"
   connect_to_twitter: "Connect to Twitter"
+  pick_lang: "Pick the language you want to play with"
   english_popover_content: "<p>This button allows you to form and vote on, only English words during game play</p> <button class='tutBtn btn btn-primary' style='width: 120px; height:30px; font-size: 20px; color: white;' id='eng-btn-po'onclick='destroy(this.id)'>Next</button>"
   english_popover_title: "<h4>English Button</h4>"
   arabic_popover_content: "<p>This button allows you to form and vote on, only Arabic words during game play</p> <button class='tutBtn btn btn-primary' style='width: 120px; height:30px; font-size: 20px; color: white;' id='ar-btn-po'onclick='destroy(this.id)'>Next</button>"
   arabic_popover_title: "<h4>Arabic Button</h4>"
   both_popover_content: "<p>This button allows you to form and vote on, Both English and Arabic words during game play</p> <button class='tutBtn btn btn-primary' style='width: 120px; height:30px; font-size: 20px; color: white;' id='both-btn-po'onclick='destroy(this.id)'>Got it</button>"
   both_popover_title: "<h4>Both Button</h4>"
-  words_list_popover_content: "<p>This List contains the words that you are required to form, and the words can have 1 of 2 colors, Either black indicating that it cant be formed yet, or orange indicating that it can be formed<p> <button onclick='callNextToolTip(this.id)' class='tutBtn btn btn-primary' id='wordsList-po'>Next</button>"
-  wordsListPopoverTitle: "<h4>Words List</h4>"
+  words_list_popover_content: "<p>This List contains the words that you are required to form, and the words can have 1 of 2 colors, Either black indicating that it can't be formed yet, or orange indicating that it could be formed<p> <button onclick='callNextToolTip(this.id)' class='tutBtn btn btn-primary' id='wordsList-po'>Next</button>"
+  words_list_popover_title: "<h4>Words List</h4>"
+  word_label_popover_content: "<p>This Label Contains the letters that are clicked<p> <button onclick='callNextToolTip2(this.id)' class='btn btn-primary' id='wordLabel-po'>Next</button>"
+  word_label_popover_title: "<h4>Letters Label</h4>"
+  table_popover_content: "To Form a Word all you need to do is simply click the buttons on the board. Note that the buttons dont have to be next to each other, and you must form all the required words before the blocks reach the top. Try Clicking a Button Now"
+  table_popover_title: "Forming Words"
+  clicked_button_popover_content: "As you can see the button is now orange, meaning that if you click it again, it will be unclicked. Note that only the last button clicked can be removed. If you want to remove more than one letter, you can click on the 'Clear Word' button"
+  clicked_button_popover_title: "Clicking a letter"
+  clicked_button_popover_button: "Start Playing"
+
+
