--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -312,12 +312,12 @@ ar:
   arabic_popover_title: "<h4>الزر العربي</h4>"
   both_popover_content: "<p>هذا الاختيار يجعلك أن تشكل وتصوت على كلمات عربية و إنجلزية<p> <button class='tutBtn btn btn-primary' style='width: 120px; height:30px; font-size: 20px; color: white;' id='both-btn-po'onclick='destroy(this.id)'>التالي</button>"
   both_popover_title: "<h4>زر كلاهما</h4>"
-  words_list_popover_content: "<p>هذه القائمة تحتوي على الكلمات التي يجب أن تكونها، والكلمات يمكن أن يكون لها لون من إثنان، إما البرتقالي وهذا يعني أنك يمكن تشكل هذه الكلمة، إما الأسود وهذا يعني أنك لم يمكنك أن تكون هذه الكلمة<p> <button onclick='callNextToolTip(this.id)' class='tutBtn btn btn-primary' id='wordsList-po'>التالي</button>"
+  words_list_popover_content: "<p>هذه القائمة تحتوي على الكلمات التي يجب عليك تكوينها. الكلمات ذات اللون البرتقالي جاهزة لتكوين، بعكس السوداء.<p> <button onclick='callNextToolTip(this.id)' class='tutBtn btn btn-primary' id='wordsList-po'>التالي</button>"
   words_list_popover_title: "<h4>قائمة الكلمات</h4>"
   word_label_popover_content: "<p>هذا المكان يحتوي على الحروف التي تم الضغط عليها<p> <button onclick='callNextToolTip2(this.id)' class='btn btn-primary' id='wordLabel-po'>التالي</button>"
   word_label_popover_title: "<h4>مكان الحروف</h4>"
-  table_popover_content: "لكي تشكل كلمة، يجب أن تضغط على الحروف التي على الشاشة، و لاحظ أن الحاروف لا يجب أن تكون بجانب بعدها، و يجب عليك أن تشكل جميع الكلمات المطلوبة قبل ما الحروف تصل إلى القمة. حاول تضغط على حرف الأن"
+  table_popover_content: "لكي تشكل كلمة، يجب أن تضغط على الحروف التي على الشاشة، و لاحظ أن الحروف لا يجب أن تكون بجانب بعضها، و يجب تشكيل جميع الكلمات المطلوبة قبل وصول الحروف إلى القمة. حاول الضغط على حرف الأن"
   table_popover_title: "تشكيل الكلمات"
-  clicked_button_popover_content: "كما ترون الأن الزر لونه برتقالي، و هذا يعني إنه إذا قمت بضغطه مرة أخرى، سيتم ازالته. لاحظ أن الزر الأخير فقط هو الذي يمكن ازالته، وإذا كنت تريد مسح الكلمة كلها يمكنك الضغط على زر مسح الكلمة "
+  clicked_button_popover_content: "كما ترون الأن الزر لونه برتقالي، و هذا يعني إنه إذا قمت بضغطه مرة أخرى، سيتم حذفه من الكلمة. لاحظ أن الزر الأخير فقط هو الذي يمكن حذفه، وإذا كنت تريد حذف الكلمة كلها يمكنك الضغط على زر حذف الكلمة "
   clicked_button_popover_title: "ضغط على حرف"
   clicked_button_popover_button: "إبدأ اللعب"
