--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -112,7 +112,7 @@ ar:
   projects_index_categories: "فئات: "
   projects_index_description: "وصف: "
   projects_index_edit: " تعديل"
-  projects_index_delete: "مسح"
+  projects_index_delete: " مسح"
   projects_index_no_shared_projects: "ليس لديك أي مشاريع مشتركة"
   no_categories: "هذا المشروع ليس له فئات"
   no_description: "هذا المشروع ليس له وصف"
@@ -306,3 +306,6 @@ ar:
   remove_connection: "إلغاء الاتصال مع تويتر"
   connect_to_twitter: "تواصل مع تويتر"
   confirm: "هل أنت متأكد من مسح المشروع ؟"
+  delete: "مسح"
+  close_delete: "الغاء"
+  submit_delete: "مسح"
