--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -169,7 +169,7 @@ en:
   projects_index_categories: "Categories: "
   projects_index_description: "Description: "
   projects_index_edit: " edit"
-  projects_index_delete: "delete"
+  projects_index_delete: " delete"
   projects_index_no_shared_projects: "There are no projects shared with you"
   add_word: "Add word"
   Add_words: "Add words"
@@ -299,3 +299,6 @@ en:
   remove_connection: "Remove Connection"
   connect_to_twitter: "Connect to Twitter"
   confirm: " Are you sure you want to delete the project?"
+  delete: "Delete"
+  close_delete: "Close"
+  submit_delete: "okay"
