--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -303,3 +303,4 @@ ar:
   already_connected: "التواصل بالفعل موجود!"
   remove_connection: "إلغاء الاتصال مع تويتر"
   connect_to_twitter: "تواصل مع تويتر"
+  add_to: "أضف إلى"
