--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -312,3 +312,4 @@ ar:
   already_connected_fb: "لقد قمت بتسجيل الدخول من قبل و حسابك متصل بفيسبوك بالفعل"
   errors_prohibited: "اخطاء منعتك من التسجيل"
   sign_up_e_acc: "سجل بحساب اخر"
+  continue_reg_fb: "لقد اعطانا فيسبوك بعض المعلومات. من فضلك املأ الفراغات لتكملة التسجيل"
