[Issue #77][WIP] Fixed reviewer's comments

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -46,7 +46,27 @@ ar:
   desc: "عن المشروع"
   new_project: "مشروع جديد"
   create_project: "انشاء مشروع"
-  back: "<< عودة"
+  back: "<< العودة"
+  egypt: "مصر"
+  lebanon: "لبنان"
+  jordan: "الاردن"
+  saudi_arabia: "السعودية"
+  libya: "ليبيا"
+  united_arab_emirates: "الامارات"
+  qatar: "قطر"
+  kuwait: "الكويت"
+  iraq: "العراق"
+  algeria: "الجزأئر"
+  morocco: "المغرب"
+  bahrain: "البحرين"
+  mauritania: "موريتانيا"
+  somalia: "الصومال"
+  sudan: "السودان"
+  tunisia: "تونس"
+  others: "اخري"
+  school: "مدرسة"
+  university: "جامعة"
+  graduate: "خريج"
   edit_project: "تعديل المشروع"
   save_project: "حفظ المشروع"
   import: "استيراد"
