--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -71,6 +71,26 @@ en:
   create_project: "Create Project"
   save_project: "Save Project"
   click_here: "Click here"
+  egypt: "Egypt"
+  lebanon: "Lebanon"
+  jordan: "Jordan"
+  saudi_arabia: "Saudi Arabia"
+  libya: "Libya"
+  united_arab_emirates: "United Arab Emirates"
+  qatar: "Qatar"
+  kuwait: "Kuwait"
+  iraq: "Iraq"
+  algeria: "Algeria"
+  morocco: "Morocco"
+  bahrain: "Bahrain"
+  mauritania: "Mauritania"
+  somalia: "Somalia"
+  sudan: "Sudan"
+  tunisia: "Tunisia"
+  others: "Others"
+  school: "School"
+  university: "University"
+  graduate: "Graduate"
   view_collectives: "Viewing collective statistics for word "
   view_stats: "View Stats"
   add_to_project: "Add to project"
