[#371][WIP] added locales for view

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -303,3 +303,13 @@ ar:
   already_connected: "التواصل بالفعل موجود!"
   remove_connection: "إلغاء الاتصال مع تويتر"
   connect_to_twitter: "تواصل مع تويتر"
+  hall_of_fame: "قاعة الشهرة"
+  your_rank: "ترتيبك"
+  your_facebook_friends: "أصدقائك في فيس بوك"
+  your_twitter_friends: "أصدقائك في تويتر"
+  rank: "الرتبة"
+  highest_score: "أعلى نقاط"
+  trophies: "الجوائز"
+  no_trophies: "لا يوجد جوائز"
+  not_connected_to_twitter: "أنت غير متصل بتويتر"
+  not_connected_to_facebook: "أنت غير متصل بفيس بوك"
