--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -296,3 +296,13 @@ en:
   already_connected: "already connected to Twitter!"
   remove_connection: "Remove Connection"
   connect_to_twitter: "Connect to Twitter"
+  hall_of_fame: "Hall Of Fame"
+  your_rank: "Your Rank"
+  your_facebook_friends: "Facebook friends"
+  your_twitter_friends: "Twitter friends"
+  rank: "Rank"
+  highest_score: "Highest Score"
+  trophies: "Trophies"
+  no_trophies: "No Trophies"
+  not_connected_to_twitter: "You are not connected to Twitter"
+  not_connected_to_facebook: "You are not connected to Facebook"
