--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -311,7 +311,7 @@ en:
   word_label_popover_title: "<h4>Letters Label</h4>"
   table_popover_content: "To Form a Word all you need to do is simply click the buttons on the board. Note that the buttons dont have to be next to each other, and you must form all the required words before the blocks reach the top. Try Clicking a Button Now"
   table_popover_title: "Forming Words"
-  clicked_button_popover_content: "As you can see the button is now orange, meaning that if you click it again, it will be unclicked. Note that only the last button clicked can be removed. If you want to remove more than one letter, you can click on the 'Clear Word' button"
+  clicked_button_popover_content: "As you can see the button is now orange, meaning that if you click it again, it will be removed from the word. Note that only the last button clicked can be removed. If you want to remove more than one letter, you can click on the 'Clear Word' button"
   clicked_button_popover_title: "Clicking a letter"
   clicked_button_popover_button: "Start Playing"
   flashing_tower_popover_content: "Uh Oh! Looks like you are about to lose, better hurry up"
