--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -302,3 +302,8 @@ en:
   already_shared_project: "Project already shared"
   project_successfully_shared: "Project has been successfully shared"
   dev_unshare: "Developer unshared"
+  projects_index_delete: " Delete"
+  delete_share: "Delete"
+  confirm_share: "Are you sure you want to remove the shared project?"
+  submit_remove: "delete"
+  close_share: "cancel"
