[Issue #366][fixing] changed some translations in the yml files

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -299,7 +299,7 @@ ar:
               before_or_equal_to: 'يجب أن يكون أكثر من عشر سنوات وأقل  من تسعون عام' 
   report_sent: "تم تقديم التقرير بنجاح. سوف يتم ابلاغك بالايميل عند إتخاذ تصرف"
   report_abusive: "حدد الكلمات غير اللائقة"
-  report: "إبلاغ"
+  report: "إبلغ من هنا"
   help_us_through_reporting: > 
     ساعدونا في تحديد الكلمات غير اللائقة عن طريق إختيار الكلمات. عند ملئك هذه 
     الإستمارة يتم عرض الكلمات على الأدمن و يتم إخطارك عن طريق الايميل في حال 
@@ -308,3 +308,4 @@ ar:
   close: "إغلاق"
   submit: "تسليم التقرير"
   report_sent_success: "تمت العملية بنجاح"
+  help_us_report: "هل تري اي كلمات غير مناسبة؟"
