[Issue #366][updating] updated translation files

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -309,3 +309,6 @@ ar:
   submit: "تسليم التقرير"
   report_sent_success: "تمت العملية بنجاح"
   help_us_report: "هل تري اي كلمات غير مناسبة؟"
+  oh_snap: "عفواً، لقد حدث خطأ ما!"
+  check_connection: >
+    يبدو أن اتصالك بالانترنت قد إنقطع! من فضلك تأكد من اتصالك بالانترنت ثم عاود المحاولة.
