--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -311,5 +311,6 @@ ar:
   highest_score: "أعلى نقاط"
   trophies: "الجوائز"
   no_trophies: "لا يوجد جوائز"
-  not_connected_to_twitter: "أنت غير متصل بتويتر"
-  not_connected_to_facebook: "أنت غير متصل بفيس بوك"
+  not_connected_to_twitter: "أنت غير متصل بتويتر، يمكنك التواصل عبر تغيير البيانات"
+  not_connected_to_facebook: "أنت غير متصل بفيس بوك، يمكنك التواصل عبر تغيير البيانات"
+  loading: "تحميل"
