[Issue #366][fixed] fixed translations

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -311,4 +311,4 @@ ar:
   help_us_report: "هل تري اي كلمات غير مناسبة؟"
   oh_snap: "عفواً، لقد حدث خطأ ما!"
   check_connection: >
-    يبدو أن اتصالك بالانترنت قد إنقطع! من فضلك تأكد من اتصالك بالانترنت ثم عاود المحاولة.
+    يبدو أن هناك خطأ منع إستكمال طلبك. من فضلك عاود المحاولة.
