--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -305,5 +305,5 @@ en:
   help_us_report: "See any inappropriate words?"
   oh_snap: "Oh snap! You got an error!"
   check_connection: >
-    Seems like your internet connection is down! 
-    Try re-connecting and then re-submitting your report.
+    Seems like an error that was encountered and prohibited the request from completion! 
+    Please, try re-submitting your request.
