[Issue #179] [WIP] finishes functionality of add words from search

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -305,3 +305,6 @@ ar:
   remove_connection: "إلغاء الاتصال مع تويتر"
   connect_to_twitter: "تواصل مع تويتر"
   add_to: "أضف إلى"
+  with: "مع"
+  synonym: "معنى"
+  add: "أضف"
