--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -298,3 +298,6 @@ en:
   remove_connection: "Remove Connection"
   connect_to_twitter: "Connect to Twitter"
   add_to: "add to"
+  with: "with"
+  synonym: "translation"
+  add: "Add"
