[Issue #179] [WIP] adds check on word limit to add words method

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -308,3 +308,5 @@ ar:
   with: "مع"
   synonym: "معنى"
   add: "أضف"
+  exceeds_word_limit: "لقد تجاوزت حد الكلمات المسموح بها لنظام اشتراكك."
+  choose_project: "من فضلك إختر مشروع لإضافة الكلمة."
