--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -132,7 +132,7 @@ en:
   Add_words: "Add words"
   Synonym_changed_successfully: "Synonym changes successfully."
   Failed_to_update_synonym: "Failed to update synonym."
-  synonym_does_not_exist: "The synonym you chose does not exist."
+  synonym_does_not_exist: "The synonym you chose does not exist. Please choose a "
   successfully_added_word_to_project: "Word added successfully."
   failed_to_add_word_to_project: "Failed to add word to project."
   word_does_not_exist: "The word you're trying to add does not exist."
@@ -301,3 +301,5 @@ en:
   with: "with"
   synonym: "translation"
   add: "Add"
+  exceeds_word_limit: "Sorry, you have exceeded the limit of words you can add defined by your subscription model."
+  choose_project: "Please choose a project."
