[Issue #205][WIP] Fixed scenario reviewer's comment

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -40,10 +40,13 @@ ar:
   formality: "اللغة"
   formal: "فصحى"
   slang: "عامية"
-  age: "الفئة العمرية"
   from: "من"
   to: "الى"
   desc: "عن المشروع"
+  target: "هذا المشروع يستهدف الفئة التالية:"
+  target_country: "البلد"
+  target_age: "الفئة العمرية"
+  target_education_level: "المستوى التعليمي"
   new_project: "مشروع جديد"
   create_project: "انشاء مشروع"
   back: "<< العودة"
