--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -61,10 +61,13 @@ en:
   formality: "Language"
   formal: "Formal"
   slang: "Slang"
-  age: "Age"
   from: "From"
   to: "To"
-  desc: "Description"
+  desc: "About the project"
+  target: "This project will target the following group:"
+  target_country: "Country"
+  target_age: "Age"
+  target_education_level: "Education level"
   new_project: "New Project"
   back: "<< Back"
   edit_project: "Edit Project"
