[Issue #354][WIP] fixed forgot password link in dropdown and sep view

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -319,3 +319,5 @@ ar:
   remove_connection: "إلغاء الاتصال مع تويتر"
   connect_to_twitter: "تواصل مع تويتر"
   you_have_prizes: "لقد ربحت الجوائز التالية"
+  forgot_password: "هل نسيت كلمة السر؟"
+  remember_me: "ابقى متصلاً "
