--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -314,3 +314,5 @@ en:
   remove_connection: "Remove Connection"
   connect_to_twitter: "Connect to Twitter"
   you_have_prizes: "You have won the following prizes!"
+  forgot_password: "Forgot your password?"
+  remember_me: "Remember me"
