[issue #352] added correct reroutes and mailer

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -303,3 +303,6 @@ ar:
   already_connected: "التواصل بالفعل موجود!"
   remove_connection: "إلغاء الاتصال مع تويتر"
   connect_to_twitter: "تواصل مع تويتر"
+  routing_error: "لا توجد هذه الصفحة"
+  exception: "هناك خطأ في الصفحة. لقد تم إبلاغ شخص مسؤول."
+
