--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -302,8 +302,8 @@ en:
   already_shared_project: "Project already shared"
   project_successfully_shared: "Project has been successfully shared"
   dev_unshare: "Developer unshared"
-  projects_index_delete: " Delete"
-  delete_share: "Delete"
-  confirm_share: "Are you sure you want to remove the shared project?"
-  submit_remove: "delete"
+  projects_index_delete: " unshare"
+  delete_share: "Unshare"
+  confirm_share: "You won't be able to view the shared project anymore,Are you sure you want to remove the shared project?"
+  submit_remove: "unshare"
   close_share: "cancel"
