[Issue #179] [WIP] modifies styling of add words from search

--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -314,7 +314,7 @@ en:
   already_connected: "already connected to Twitter!"
   remove_connection: "Remove Connection"
   connect_to_twitter: "Connect to Twitter"
-  add_to: "add to"
+  add_to: "Add to"
   with: "with"
   synonym: "translation"
   add: "Add"
