[#198][#199][WIP] handled internet connection error

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -322,3 +322,4 @@ ar:
       first: "الاولى"
       last: "الاخيرة"
       truncate: "&hellip;"
+  connection_error: "فشل الاتصال بالانترنت، تأكد من الاتصال"
