--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -313,3 +313,4 @@ en:
       previous: "&lt; Previous"
       next: "Next &gt;"
       truncate: "&hellip;"
+  connection_error: "Connection Error, please make sure you're connected to the internet"
