[Issue #75 #210][WIP] finished implementation

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -135,13 +135,22 @@ ar:
   projects_index_tab2: "مشاريع مشتركة معي"
   projects_index_add: " إضافة مشروع"
   projects_index_name: "اسم: "
-  projects_index_categories: "فئات: "
+  projects_index_categories: "فئة: "
   projects_index_description: "وصف: "
+  projects_index_country: "البلد: "
+  projects_index_formal_slang: "اللغة: "
+  projects_index_age: "الفئة العمرية: "
+  projects_index_education_level: "المستوي التعليمي: "
+  projects_index_owner: "صاحب المشروع: "
+  no_country: "ليس محدد"
+  no_formal: "ليس محدد"
+  no_age: "ليس محدد"
+  no_education_level: "ليس محدد"
   projects_index_edit: " تعديل"
-  projects_index_delete: " مسح"
+  projects_index_delete2: " مسح"
   projects_index_no_shared_projects: "ليس لديك أي مشاريع مشتركة"
-  no_categories: "هذا المشروع ليس له فئات"
-  no_description: "هذا المشروع ليس له وصف"
+  no_categories: "ليس محدد"
+  no_description: "ليس محدد"
   description_choose_keywords: "المرادف الاحمر سيتم استخدامه في مشروعك"
   select subscription: "إختر"
   exceeded_project_limit: "عذرا لا يمكنك انشاء مشاريع اخرى. برجاء الاشتراك في انظمة بريميوم او ديلوكس"
