--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -192,10 +192,19 @@ en:
   projects_index_tab2: "Projects shared with me"
   projects_index_add: " Add a project"
   projects_index_name: "Name: "
-  projects_index_categories: "Categories: "
+  projects_index_categories: "Category: "
   projects_index_description: "Description: "
-  projects_index_edit: " edit"
-  projects_index_delete: " delete"
+  projects_index_country: "Country: "
+  projects_index_formal_slang: "Language: "
+  projects_index_age: "Age: "
+  projects_index_education_level: "Education level: "
+  no_country: "None"
+  no_formal: "None"
+  no_age: "None"
+  no_education_level: "None"
+  projects_index_owner: "Owner: "
+  projects_index_edit: " Edit"
+  projects_index_delete2: " Delete"
   projects_index_no_shared_projects: "There are no projects shared with you"
   add_word: "Add word"
   Add_words: "Add words"
@@ -217,8 +226,8 @@ en:
   no_project: "Project does not exist!"
   file: "file"
   log_in_google: "Sign In with Google"
-  no_categories: "This project has no categories"
-  no_description: "This project has no description"
+  no_categories: "None"
+  no_description: "None"
   register_developer: "Please register as a developer first"
   developer_cant_see_project: "You are not allowed to view this project"
   first_name: "First Name"
@@ -356,7 +365,7 @@ en:
   already_shared_project: "Project already shared"
   project_successfully_shared: "Project has been successfully shared"
   dev_unshare: "Developer unshared"
-  projects_index_delete: " unshare"
+  projects_index_delete: " Unshare"
   delete_share: "Unshare"
   confirm_share: "You won't be able to view the shared project anymore,Are you sure you want to remove the shared project?"
   submit_remove: "unshare"
@@ -418,7 +427,6 @@ en:
   already_shared_project: "Project already shared"
   project_successfully_shared: "Project has been successfully shared"
   dev_unshare: "Developer unshared"
-  projects_index_delete: " unshare"
   delete_share: "Unshare"
   confirm_share: "You won't be able to view the shared project anymore,Are you sure you want to remove the shared project?"
   submit_remove: "unshare"
