[Issue #179] [WIP] modifies functionality to add word in search without redirecting

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -81,7 +81,7 @@ ar:
   follow_word_end_of_search: "إضغط هنا!"
   follow_keyword_alert_fail: "هذه الكلمة متابعة:"
   no_votes_for_word: "عذراً معاني هذه الكلمة لم تحصل على أي أصوات بعد."
-  select subscription: "إختر"
+  select_subscription: "إختر"
   choose_keyword_title: "اختار من الكلمات التالية ليتم اضافتها إلى هذا المشروع"
   choose_keyword_remaining: "تبقى لك عدد"
   choose_keywords_remaining2: "كلمة"
@@ -119,7 +119,7 @@ ar:
   no_categories: "هذا المشروع ليس له فئات"
   no_description: "هذا المشروع ليس له وصف"
   description_choose_keywords: "المرادف الاحمر سيتم استخدامه في مشروعك"
-  select subscription: "إختر"
+  select_subscription: "إختر"
   error: "اخطاء"
   cancel: "الغاء"
   prohibited_project_error: "اخطاء منعت عملية الحفظ"
@@ -360,9 +360,11 @@ ar:
   modal_yes_button: "أجل"
   modal_no_button: "لا"
   you_have_prizes: "لقد ربحت الجوائز التالية"
-   add_to: "أضف إلى"
+  add_to: "أضف إلى"
   with: "مع"
   synonym: "معنى"
   add: "أضف"
   exceeds_word_limit: "لقد تجاوزت حد الكلمات المسموح بها لنظام اشتراكك."
   choose_project: "من فضلك إختر مشروع لإضافة الكلمة."
+  choose_synonym: "من فضلك إختر معنى لإضافة الكلمة."
+  to_project: "إذهب إلى المشروع."
