[Issue #195][updating] updated translations

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -359,3 +359,4 @@ ar:
   modal_yes_button: "أجل"
   modal_no_button: "لا"
   you_have_prizes: "لقد ربحت الجوائز التالية"
+  wrong_age_input: "ادخلت رقم خطأ"
