--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -353,3 +353,4 @@ en:
   modal_yes_button: "Yes"
   modal_no_button: "No"
   you_have_prizes: "You have won the following prizes!"
+  wrong_age_input: "Wrong age input"
