[WIP] commiting gamer tab

--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -283,3 +283,7 @@ en:
   education_level: "Education level"
   date_of_birth: "Date of Birth"
   back_to_game: "Back"
+  prizes: "Prizes"
+  trophies: "Trophies"
+  invite: "Invitations"
+  rank: "Rank"
