--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -290,4 +290,8 @@ ar:
         gamer:
           attributes:
             date_of_birth:
-              before_or_equal_to: 'يجب أن يكون أكثر من عشر سنوات وأقل  من تسعون عام' 
+              before_or_equal_to: 'يجب أن يكون أكثر من عشر سنوات وأقل  من تسعون عام'
+  prizes: "الجوائز" 
+  trophies: "الإنجازات" 
+  invite: "دعوات" 
+  rank: "الرتبة"          
