--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -314,3 +314,6 @@ en:
   remove_connection: "Remove Connection"
   connect_to_twitter: "Connect to Twitter"
   you_have_prizes: "You have won the following prizes!"
+  enter_a_synonym: "enter a new synonym"
+  skip_this_keyword: "skip this keyword"
+  suggest_this_synonym: "save new translation"
